--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Run Chatbot Evaluation
+        run: python eval_model.py
+
       - name: 🐳 Log in to DockerHub
         uses: docker/login-action@v3
         with:
