--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Chatbot Evaluation
-        run: python ./tests/eval_model.py
+      - name: Set environment variables
+        run: |
+          echo "GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}" >> $GITHUB_ENV
+          echo "PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }}" >> $GITHUB_ENV
+          echo "LANGSMITH_API_KEY=${{ secrets.LANGSMITH_API_KEY }}" >> $GITHUB_ENV
+          echo "LANGSMITH_TRACING=true" >> $GITHUB_ENV
 
+      - name: Run evaluation script
+        run: PYTHONPATH=. python tests/eval_model.py
+        
       - name: 🐳 Log in to DockerHub
         uses: docker/login-action@v3
         with:
