--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,17 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main]  # or "master" or your deployment branch
+    branches: [main]  # adjust as needed
   pull_request:
 
+env:
+  GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+  LANGSMITH_API_KEY: ${{ secrets.LANGSMITH_API_KEY }}
+  PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
+  PINECONE_API_ENV: ${{ secrets.PINECONE_API_ENV }}
+
 jobs:
-  build-and-deploy:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,31 +22,32 @@ jobs:
       - name: 🐍 Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
       - name: 📦 Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Set environment variables
-        run: |
-          echo "GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}" >> $GITHUB_ENV
-          echo "PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }}" >> $GITHUB_ENV
-          echo "LANGSMITH_API_KEY=${{ secrets.LANGSMITH_API_KEY }}" >> $GITHUB_ENV
-          echo "LANGSMITH_TRACING=true" >> $GITHUB_ENV
-
-      - name: Run evaluation script
+      - name: 🧪 Run Evaluation Script
         run: PYTHONPATH=. python tests/eval_model.py
-        
+
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    needs: test  # ✅ only run if tests pass
+    steps:
+      - name: 📥 Checkout Repository
+        uses: actions/checkout@v3
+
       - name: 🐳 Log in to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: 🔧 Build Docker Image
+      - name: 🐳 Build Docker Image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/rag-assistant:latest .
 
       - name: 🚀 Push Docker Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/rag-assistant:latest
+
