--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,18 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline for RAG Assistant
 
 on:
   push:
-    branches: [main]  # adjust as needed
+    branches: [main]
   pull_request:
 
 env:
   GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
   LANGSMITH_API_KEY: ${{ secrets.LANGSMITH_API_KEY }}
   PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
-  PINECONE_API_ENV: ${{ secrets.PINECONE_API_ENV }}
 
 jobs:
   test:
+    name: 🧪 Run Unit Tests
     runs-on: ubuntu-latest
 
     steps:
@@ -22,7 +22,7 @@ jobs:
       - name: 🐍 Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: 📦 Install Dependencies
         run: |
@@ -32,9 +32,11 @@ jobs:
       - name: 🧪 Run Evaluation Script
         run: PYTHONPATH=. python tests/eval_model.py
 
-  build-and-deploy:
+  build:
+    name: 🐳 Build Docker Image
     runs-on: ubuntu-latest
-    needs: test  # ✅ only run if tests pass
+    needs: test
+
     steps:
       - name: 📥 Checkout Repository
         uses: actions/checkout@v3
@@ -45,9 +47,23 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: 🐳 Build Docker Image
+      - name: 🔧 Build Docker Image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/rag-assistant:latest .
+
+  deploy:
+    name: 🚀 Push Docker Image
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: 📥 Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: 🐳 Log in to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: 🚀 Push Docker Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/rag-assistant:latest
-
