fixed for cicd 4

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ env:
   GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
   LANGSMITH_API_KEY: ${{ secrets.LANGSMITH_API_KEY }}
   PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
+  PINECONE_API_ENV: ${{ secrets.PINECONE_API_ENV }}
 
 jobs:
   test:
@@ -32,8 +33,8 @@ jobs:
       - name: 🧪 Run Evaluation Script
         run: PYTHONPATH=. python tests/eval_model.py
 
-  build:
-    name: 🐳 Build Docker Image
+  build-and-deploy:
+    name: 🐳 Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: test
 
@@ -48,22 +49,14 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: 🔧 Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/rag-assistant:latest .
-
-  deploy:
-    name: 🚀 Push Docker Image
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: 📥 Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: 🐳 Log in to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/rag-assistant:latest \
+                       -t ${{ secrets.DOCKER_USERNAME }}/rag-assistant:${{ github.sha }} .
 
       - name: 🚀 Push Docker Image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/rag-assistant:latest
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/rag-assistant:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/rag-assistant:${{ github.sha }}
+
+      - name: 🧹 Clean Up
+        run: docker image prune -f
