added mongodb as json storage

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,3 +60,6 @@ jobs:
 
       - name: 🧹 Clean Up
         run: docker image prune -f
+
+      - name: 🚀 Trigger Render Deployment
+        run: curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK }}
